--- a/config/application.yml
+++ b/config/application.yml
@@ -26,3 +26,6 @@ PLANT: 111A,112A,281A,381A,481A,482A
 MTYPE: Mechanical,Electronic
 TERRITORY: DT,TX,Supplier
 ROLE: Applicant,Supervisor,Reviewer,Approver
+HTTP_SERVER: "127.0.0.1:3000"
+MAIL_SERVER: "172.91.1.253"
+MAIL_PORT: "25"
