--- a/config/application.yml
+++ b/config/application.yml
@@ -18,7 +18,7 @@
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 ADMIN_NAME: First User
-ADMIN_EMAIL: user@example.com
+ADMIN_EMAIL: jill.lin@l-e-i.com
 ADMIN_PASSWORD: changeme
 
 COMPANY: L111,L210,L300,L400
