--- a/config/application.yml
+++ b/config/application.yml
@@ -23,8 +23,8 @@ ADMIN_PASSWORD: changeme
 
 COMPANY: L111,L210,L300,L400
 PLANT: 111A,112A,281A,381A,481A,482A
-MTYPE: Mechanical,Electronic
-TERRITORY: DT,TX,Supplier
+MTYPE: MECHANICAL,ELECTRONIC
+TERRITORY: DT,TX,SUPPLIER
 ROLE: Applicant,Supervisor,Reviewer,Approver
 HTTP_SERVER: "127.0.0.1:3000"
 MAIL_SERVER: "172.91.1.253"
