--- a/config/application.yml
+++ b/config/application.yml
@@ -26,6 +26,7 @@ PLANT: 111A,112A,281A,381A,481A,482A
 MTYPE: MECHANICAL,ELECTRONIC
 TERRITORY: DT,TX,SUPPLIER
 ROLE: Applicant,Supervisor,Reviewer,Approver
+DISTY: YES,NO
 HTTP_SERVER: "127.0.0.1:3000"
 MAIL_SERVER: "172.91.1.253"
 MAIL_PORT: "25"
